--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": "^8.1",
         "aws/aws-sdk-php": "^3.324",
         "codeigniter4/framework": "^4.0",
-        "hermawan/codeigniter4-datatables": "^0.7.2"
+        "hermawan/codeigniter4-datatables": "^0.7.2",
+        "phpoffice/phpword": "^1.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
